Append detection script and extension icons

--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,25 @@
 {
   "name": "HighLang",
-  "description": "Base Level Extension",
+  "description": "Browser Extension that Translates Highlighted Text",
   "version": "1.0",
   "manifest_version": 3,
   "action": {
     "default_popup": "base.html",
-    "default_icon": "highlang.png"
+    "default_icon": "images/icons/highlang-512.png"
+  },
+  "content_scripts": [
+    {
+      "js": ["scripts/detect.js"],
+      "matches": [
+        "http://*/*",
+        "https://*/*"
+      ]
+    }
+  ],
+  "icons": {
+    "16": "images/icons/highlang-16.png",
+    "32": "images/icons/highlang-32.png",
+    "48": "images/icons/highlang-48.png",
+    "128": "images/icons/highlang-128.png"
   }
 }
